sign in UI 1st commit

--- a/src/i18n/translate/en/common.json
+++ b/src/i18n/translate/en/common.json
@@ -1,4 +1,14 @@
 {
     "name": "Name",
-    "login": "Login"
+    "login": "Login",
+    "register": "Register",
+    "password": "Password",
+    "enter_email": "Enter email",
+    "enter_password": "Enter password",
+    "register_now": "register now",
+    "field_required" : "This field is required",
+    "right_email" : "Enter true form of email",
+    "max_length" : "Max length is: ",
+    "min_length" : "Min length is: "
+
 }
