--- a/src/i18n/translate/vi/common.json
+++ b/src/i18n/translate/vi/common.json
@@ -1,4 +1,13 @@
 {
-    "name": "Ten",
-    "login": "Đăng nhập"
+    "name": "Tên",
+    "login": "Đăng nhập",
+    "register": "Đăng ký",
+    "password": "Mật khẩu",
+    "enter_email": "Nhập email vào",
+    "enter_password": "Nhập mật khẩu vào",
+    "register_now": "đăng ký ngay",
+    "field_required" : "Trường này là bắt buộc",
+    "right_email" : "Nhập đúng định dạng email",
+    "max_length" : "Số ký tự tối đa là: ",
+    "min_length" : "Số ký tự tối thiểu là: "
 }
