sign in UI 1st commit

--- a/src/i18n/translate/en/common.json
+++ b/src/i18n/translate/en/common.json
@@ -1,4 +1,7 @@
 {
-    "name": "Name",
-    "login": "Login"
+  "name": "Name",
+  "login": "Login",
+  "register": "Register",
+  "password": "Password",
+  "email": "Email"
 }
