xoa khoang trang, fomat code, translate, dat ten class, id htmlFor

--- a/src/i18n/translate/vi/register.json
+++ b/src/i18n/translate/vi/register.json
@@ -11,13 +11,13 @@
   "name_err_min": "Tối thiểu 6 kí tự",
   "name_err_max": "Tối đa 30 ký tự",
   "name_required": "Bắt buộc điền vào họ và tên",
-  "email_err": "Định dạng email không chính xác",
+  "email_format_err": "Định dạng email không chính xác",
   "email_err_max": "Tối đa 50 kí tự",
   "email_err_required": "Bắt buộc điền vào email!",
-  "phone_err": "Không phải số điện thoại",
-  "phone_er2": "Bắt buộc 11 số",
+  "not_phone_number_err": "Không phải số điện thoại",
+  "phone_err_length": "Bắt buộc 11 số",
   "phone_required": "Bắt buộc điền vào số điện thoại",
-  "password_err": "Tối đa 8 kí tự",
+  "password_err_min": "Tối đa 8 kí tự",
   "password_max": "Tối đa 16 kí tự",
   "login_now": "Đăng nhập ngay",
   "already_account": "Đã có tài khoản"
