--- a/src/i18n/translate/en/register.json
+++ b/src/i18n/translate/en/register.json
@@ -12,8 +12,9 @@
   "name_err_max": "Up to 30 characters",
   "name_required": "First and last name is required",
   "email_err_max": "Up to 50 characters",
-  "email_err": "Incorrect email format",
-  "phone_err": "Not a phone number",
+  "email_format_err": "Incorrect email format",
+  "not_phone_number_err": "Not a phone number",
+  "phone_err_length": "11 numbers",
   "phone_required": "Phone number is required",
   "password_err": "Up to 8 characters",
   "password_max": "Up to 16 characters",
