--- a/src/i18n/translate/en/register.json
+++ b/src/i18n/translate/en/register.json
@@ -1,23 +1,17 @@
 {
-  "name": "Name",
-  "signup": "Sign up",
-  "sex": "Sex",
-  "male": "Male",
-  "female": "Female",
-  "date": "date",
-  "email": "Email",
-  "phone": "Phone",
-  "password": "Password",
-  "name_err_min": "Minimum 6 characters",
-  "name_err_max": "Up to 30 characters",
-  "name_required": "First and last name is required",
-  "email_err_max": "Up to 50 characters",
-  "email_format_err": "Incorrect email format",
-  "not_phone_number_err": "Not a phone number",
-  "phone_err_length": "11 numbers",
-  "phone_required": "Phone number is required",
-  "password_err": "Up to 8 characters",
-  "password_max": "Up to 16 characters",
   "already_account": "Already have an account",
-  "login_now": "log in now"
+  "login_now": "log in now",
+
+  "validation": {
+    "name_err_min": "Minimum 6 characters",
+    "name_err_max": "Up to 30 characters",
+    "name_required": "First and last name is required",
+    "email_err_max": "Up to 50 characters",
+    "email_format_err": "Incorrect email format",
+    "not_phone_number_err": "Not a phone number",
+    "phone_err_length": "11 numbers",
+    "phone_required": "Phone number is required",
+    "password_err": "Up to 8 characters",
+    "password_max": "Up to 16 characters"
+  }
 }
