--- a/src/i18n/translate/vi/register.json
+++ b/src/i18n/translate/vi/register.json
@@ -1,24 +1,18 @@
 {
-  "name": "Họ tên",
-  "signup": "Đăng ký",
-  "sex": "Giới tính",
-  "male": "Nam",
-  "female": "Nữ",
-  "date": "Ngày sinh",
-  "email": "Email",
-  "phone": "Điện thoại",
-  "password": "Mật khẩu",
-  "name_err_min": "Tối thiểu 6 kí tự",
-  "name_err_max": "Tối đa 30 ký tự",
-  "name_required": "Bắt buộc điền vào họ và tên",
-  "email_format_err": "Định dạng email không chính xác",
-  "email_err_max": "Tối đa 50 kí tự",
-  "email_err_required": "Bắt buộc điền vào email!",
-  "not_phone_number_err": "Không phải số điện thoại",
-  "phone_err_length": "Bắt buộc 11 số",
-  "phone_required": "Bắt buộc điền vào số điện thoại",
-  "password_err_min": "Tối đa 8 kí tự",
-  "password_max": "Tối đa 16 kí tự",
   "login_now": "Đăng nhập ngay",
-  "already_account": "Đã có tài khoản"
+  "already_account": "Đã có tài khoản",
+
+  "validation": {
+    "name_err_min": "Tối thiểu 6 kí tự",
+    "name_err_max": "Tối đa 30 ký tự",
+    "name_required": "Bắt buộc điền vào họ và tên",
+    "email_format_err": "Định dạng email không chính xác",
+    "email_err_max": "Tối đa 50 kí tự",
+    "email_err_required": "Bắt buộc điền vào email!",
+    "not_phone_number_err": "Không phải số điện thoại",
+    "phone_err_length": "Bắt buộc 11 số",
+    "phone_required": "Bắt buộc điền vào số điện thoại",
+    "password_err_min": "Tối đa 8 kí tự",
+    "password_max": "Tối đa 16 kí tự"
+  }
 }
