edit Login UI, create reducer auth, router

--- a/src/i18n/translate/en/common.json
+++ b/src/i18n/translate/en/common.json
@@ -1,7 +1,7 @@
 {
   "name": "Name",
   "login": "Login",
-  "signup": "Sign up",
+  "signup": "SIGN UP",
   "sex": "Sex",
   "male": "Male",
   "female": "Female",
