--- a/src/i18n/translate/en/register.json
+++ b/src/i18n/translate/en/register.json
@@ -1,5 +1,5 @@
 {
-  "already_account": "Already have an account",
+  "already_account": "Already have an account?",
   "login_now": "log in now",
 
   "validation": {
