--- a/src/i18n/translate/vi/common.json
+++ b/src/i18n/translate/vi/common.json
@@ -1,7 +1,7 @@
 {
   "name": "Họ tên",
   "login": "Đăng nhập",
-  "signup": "Đăng ký",
+  "signup": "ĐĂNG KÝ",
   "sex": "Giới tính",
   "male": "Nam",
   "female": "Nữ",
